fix: add margin-top to waybar config for proper spacing

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -10,7 +10,7 @@
 window#waybar {
     background: transparent;
     color: #cdcdcd;
-    margin: 50px 12px 20px 12px;
+    margin: 0 12px 20px 12px;
 }
 
 tooltip {
